feat: :sparkles: Implementacion de vista para filtro de acuerdo a quien esta en el complejo